Made mode logic and added signup/signin page

--- a/spotify/pubspec.yaml
+++ b/spotify/pubspec.yaml
@@ -15,14 +15,17 @@ dependencies:
 
 
   cupertino_icons: ^1.0.8
-  flutter_svg: ^2.0.17
+  flutter_svg:
+  flutter_bloc: 
+  hydrated_bloc: 
+  path_provider: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
 
